2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in: Create a makefile for the FileSystemSyncService Addin.
	* Tomboy.mdp: Added FileSystemSyncServiceAddin.cs.
	* Tomboy/PreferencesDialog.cs: Warn the user about clearing their sync
	  settings before actually doing it.
	* Tomboy/Addins/FileSystemSyncService/FileSystemSyncService.addin.xml,
	  Tomboy/Addins/FileSystemSyncService/FileSystemSyncServiceAddin.cs,
	  Tomboy/Addins/FileSystemSyncService/Makefile.am: New
	  SyncServiceAddin for synchronizing to a local path.
	* Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs: Added a
	  TODO item to unmount the FUSE mount.
	* Tomboy/Addins/Makefile.am: Build the FileSystemSyncService
	* Tomboy/Preferences.cs: Changed SYNC_URL -> SYNC_LOCAL_PATH.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs: Changed
	  WebDav -> WebDAV.

2007-06-28  Boyd Timothy <btimothy@gmail.com> 

	* configure.in: Added Tomboy/Addins/WebDavSyncService/Makefile.
	* Tomboy.mdp: Added SyncUtils.cs, SyncServiceAddin.cs,
	  WebDavSyncServiceAddin.cs, and WebDavSyncServer.cs for a new WebDav
	  Sync Service Addin.
	* Tomboy/PreferencesDialog.cs: Added code to dynamically load and show
	  addins for the synchronization tab.
	* Tomboy/SyncUtils.cs:  New SyncUtils class to deal with discovering
	  and enabling FUSE.
	* Tomboy/SyncServiceAddin.cs: New SyncServiceAddin abstract class.
	* Tomboy/SyncManager.cs: Modified to use SyncServiceAddins instead of
	  being hardcoded to the FileSystemSyncServer.
	* Tomboy/FileSystemSyncServer.cs: Changed the constructor to take a
	  file system path.
	* Tomboy/AddinManager.cs: Added code to access all the
	  SyncServiceAddins.
	* Tomboy/Tomboy.addin.xml: Added a Mono.Addin extension point for
	  SyncServiceAddin.
	* Tomboy/Addins/WebDavSyncService/WebDavSyncServer.cs,
	  Tomboy/Addins/WebDavSyncService/WebDavSyncService.addin.xml,
	  Tomboy/Addins/WebDavSyncService/Makefile.am,