@@ -77,6 +77,8 @@
     <File name="./Tomboy/Addins/WebDavSyncService" subtype="Directory" buildaction="Compile" />
     <File name="./Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs" subtype="Code" buildaction="Compile" />
     <File name="./Tomboy/Addins/WebDavSyncService/WebDavSyncServer.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Tomboy/Addins/SshSyncService" subtype="Directory" buildaction="Compile" />
+    <File name="./Tomboy/Addins/SshSyncService/SshSyncServiceAddin.cs" subtype="Code" buildaction="Compile" />
     <File name="./Tomboy/Addins/FileSystemSyncService" subtype="Directory" buildaction="Compile" />
     <File name="./Tomboy/Addins/FileSystemSyncService/FileSystemSyncServiceAddin.cs" subtype="Code" buildaction="Compile" />
   </Contents>
