@@ -1,3 +1,12 @@
+2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
+	* configure.in, Tomboy.mdp, Tomboy/Addins/Makefile.am,
+	  Tomboy/Addins/SshSyncService,
+	  Tomboy/Addins/SshSyncService/SshSyncServiceAddin.cs: Initial commit
+	  of SshSyncServiceAddin using sshfs.  
+	* Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs: Account
+	  for Ubuntu's `mount` output.
+
 2007-06-29  Boyd Timothy <btimothy@gmail.com> 
 
 	* configure.in: Create a makefile for the FileSystemSyncService Addin.
